# GPT-Workshop-Part-2

./: README.md  pyproject.toml
Deployment/Local/: GPT-2 Flask REST Endpoint Solution Server.ipynb
Deployment/Local/.ipynb_checkpoints/: GPT-2 Flask REST Endpoint Solution Client-checkpoint.ipynb  GPT-2 Flask REST Endpoint Workbook-checkpoint.ipynb
FineTuning/: FineTune Instructions Solution.ipynb
FineTuning/.ipynb_checkpoints/: FineTune - Instruct Workbook-checkpoint.ipynb
Foundational Models/.ipynb_checkpoints/: FM - Solution-checkpoint.ipynb  FM - Workbook-checkpoint.ipynb
Monitoring/: Langfuse SDK Solution.ipynb  Langfuse SDK Workbook.ipynb
Testing/: Deep Eval Testing Solution.ipynb  Deep Eval Testing Workbook.ipynb
Testing/.ipynb_checkpoints/: Deep Eval Testing Solution-checkpoint.ipynb  Deep Eval Testing Workbook-checkpoint.ipynb
